@@ -25,6 +25,12 @@
 \definecolor{declarebg}{rgb}{1,0.8,0.8}
 \definecolor{gray}{gray}{.5}
 \definecolor{darkgreen}{rgb}{0,.5,0}
+\definecolor{orange}{rgb}{1,.5,0}
+\definecolor{mintgreen}{rgb}{.5,.75,.5}
+\definecolor{input}{rgb}{0,0,0.8}
+\definecolor{output}{rgb}{0.7,0,0}
+\definecolor{triangle}{rgb}{1,0.5,0}
+\definecolor{border}{rgb}{0,0.8,0}
 
 % Patches of macros...
 \renewenvironment{pgfmanualentry}{\begin{description}}{\end{description}}
