@@ -253,15 +253,16 @@
     \pgf@xc=-\pgf@xa%
     \pgf@yc=-\pgf@ya%
     \expandafter\xdef\csname @pgfshading#1!\endcsname{%
-      \hbox to\pgf@x{\vbox to\pgf@y{\vfil
+      \hbox to\the\pgf@x{\vbox to\the\pgf@y{\vfil
           \noexpand\pgfsys@beginpurepicture%
           \noexpand\pgfsys@invoke{%
-            1 setlinewidth [] 0 setdash 0 setlinecap
+            \pgf@sys@tonumber{\pgf@xc} \pgf@sys@tonumber{\pgf@yc} translate
+            1.1 setlinewidth [] 0 setdash 0 setlinecap
             /pgfproc {#4} bind def 
             \pgf@sys@tonumber{\pgf@ya} 1 \pgf@sys@tonumber{\pgf@yb}
             {
               \pgf@sys@tonumber{\pgf@xa} 1 \pgf@sys@tonumber{\pgf@xb}
-              { 1 index 2 copy pgfproc setrgbcolor moveto 1 0 rlineto stroke }
+              { 1 index 2 copy pgfproc setrgbcolor moveto 1.1 0 rlineto stroke }
               for 
             }
             for            
