@@ -93,7 +93,7 @@
   \else%
     \expandafter\global\expandafter\let\csname pgf@sys@fail@#1\endcsname=\pgfutil@empty%
     \PackageWarning{pgf}{%
-      Your graphic driver \pgfsysdriver\space does not supported #1. This warning is given only once}%
+      Your graphic driver \pgfsysdriver\space does not support #1. This warning is given only once}%
   \fi%
 }
 
