@@ -1,4 +1,14 @@
-2008-02-7 Mark Wibrow <vibrovski@users.sourceforge.net>
+2008-02-07 Till Tantau <tantau@users.sourceforge.net>
+
+	- Patched Makefiles according to suggestion by Hans Meine.
+	- Fixed bug: duplicate fading name in pgflibraryfadings.
+	- Fixed bug: wrong size of functional shading in dvips.
+	- Fixed bud: documentation a4paper setting.
+	- Fixed bug: Manual now compiles with tex4ht once more.
+	- Fixed bug: Manual now is hyperlinked also for dvipdfm.
+	- Fixed bug: wrong size of all shadings in svg code.
+
+2008-02-07 Mark Wibrow <vibrovski@users.sourceforge.net>
 
 	- Removed internal asin tables as asin is now calculated from 
 	  acos tables.
